--- a/package.json
+++ b/package.json
@@ -49,5 +49,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://yohan-work.github.io/client"
+  "homepage": "https://HyeokThing.github.io/ClientProgramming/"
 }
